[gd_scene load_steps=4 format=3 uid="uid://dxij5jpdnpk3p"]

[ext_resource type="Texture2D" uid="uid://c0pa4g3k31bcc" path="res://sprites/decks/anglo.png" id="1_grwcr"]
[ext_resource type="Script" uid="uid://bg4ps1d64u5os" path="res://scripts/card.gd" id="2_xlg5i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8xvw"]
size = Vector2(200, 300)

[node name="card" type="Sprite2D" groups=["cards"]]
texture = ExtResource("1_grwcr")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 200, 300)
script = ExtResource("2_xlg5i")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(100, 150)
shape = SubResource("RectangleShape2D_t8xvw")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 200.0
offset_bottom = 300.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
